hphp/test/slow/enum_class/serialize.php.expectf
Warning: json_encode(): type is unsupported, encoded as false in %s on line 15
bool(false)
vec(0) {
}

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Cannot Serialize unexpected type EnumClassLabel' in %s:11
Stack trace:
%A
